package(default_visibility = ["//visibility:public"])

proto_library(
    name = "sound_proto",
    srcs = [
        "sound.proto",
    ],
)

cc_proto_library(
    name = "sound",
    deps = [":sound_proto"],
)

proto_library(
    name = "wvx_proto",
    srcs = [
        "wvx.proto",
    ],
    deps = [
        ":sound_proto",
    ],
)

cc_proto_library(
    name = "wvx",
    deps = [":wvx_proto"],
)
